flyweight example created

--- a/Flyweight Pattern/index.html
+++ b/Flyweight Pattern/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flyweight Pattern</title>
+    <title>Flyweight Pattern Demo</title>
     <link rel="stylesheet" href="style.css" />
     <script src="./dist/flyweightPattern.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div id="catalog" class="product-catalog">
+      <h2>Product Catalog</h2>
+      <button id="add-product">Add New Product</button>
+      <div id="product-list"></div>
+    </div>
+  </body>
 </html>
