--- a/Chain of Responsibility Pattern/index.html
+++ b/Chain of Responsibility Pattern/index.html
@@ -8,5 +8,28 @@
     <link rel="stylesheet" href="style.css" />
     <script src="./dist/chainOfResponsibilityPattern.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="window">
+      <div class="form-container">
+        <div class="form-title">
+          <h4>Login</h4>
+        </div>
+        <form id="validationForm">
+          <div class="form-input">
+            <label for="username">Username:</label>
+            <input type="text" id="username" placeholder="Username" />
+          </div>
+          <div class="form-input">
+            <label for="email">Email:</label>
+            <input type="email" id="email" placeholder="Email" />
+          </div>
+          <div class="form-input">
+            <label for="password">Password:</label>
+            <input type="password" id="password" placeholder="Password" />
+          </div>
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
