--- a/Memento Pattern/index.html
+++ b/Memento Pattern/index.html
@@ -8,5 +8,9 @@
     <script src="./dist/mementoPattern.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="editor" contenteditable="true"></div>
+    <button id="undoButton">Undo</button>
+    <script src="script.js"></script>
+  </body>
 </html>
