update chainofresponsibility refactor

--- a/Behavioral/ChainOfResponsibility/index.html
+++ b/Behavioral/ChainOfResponsibility/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chain of Responsibility Pattern</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="./index.js" defer></script>
+    <script src="./dist/index.js" defer></script>
   </head>
   <body>
     <div class="window">
