--- a/Behavioral/Memento/index.html
+++ b/Behavioral/Memento/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Memento Pattern: Example</title>
-    <script src="./dist/mementoPattern.js" defer></script>
+    <script src="./dist/index.js" defer="defer"></script>
     <link rel="stylesheet" href="style.css" />
+    <script defer="defer" src="dist/index.js"></script>
   </head>
   <body>
     <div id="editor" contenteditable="true"></div>
     <button id="undoButton">Undo</button>
-    <script src="script.js"></script>
   </body>
 </html>
